rns-lang/src/lexer/snapshots/comments-empty.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
;
----- TOKENS -----
KIND     | SPAN  | LSP     | TEXT
----     | ----  | ---     | ----
Newline  | 1..2  | 0:1..2  | \n
