rns-lang/src/lexer/snapshots/comments-no_space_before.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
identifier;followed_by_comment
----- TOKENS -----
KIND                                          | SPAN    | LSP       | TEXT
----                                          | ----    | ---       | ----
Identifier("identifier;followed_by_comment")  | 0..30   | 0:0..30   | identifier;followed_by_comment
Newline                                       | 30..31  | 0:30..31  | \n
