rns-lang/src/lexer/snapshots/comments-special_chars.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
; comment with special chars !@#$%^&*()
----- TOKENS -----
KIND     | SPAN    | LSP       | TEXT
----     | ----    | ---       | ----
Newline  | 39..40  | 0:39..40  | \n
