rns-lang/src/lexer/snapshots/directives-code_directive.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
.code
----- TOKENS -----
KIND     | SPAN  | LSP     | TEXT
----     | ----  | ---     | ----
DotCode  | 0..5  | 0:0..5  | .code
